fix[admin]修復後台scrollBar(Stores&Lessons&Members&Teachers)

--- a/client/components/adminMainContent/admin-content.module.scss
+++ b/client/components/adminMainContent/admin-content.module.scss
@@ -10,16 +10,6 @@
 	border-radius: 45px;
 	background: white;
 }
-.contentBox {
-	min-height: 96%;
-}
 .content {
-	height: 100%;
-	padding: 15px;
-	overflow-y: scroll;
-	scrollbar-width: none;
-}
-
-.Pagination {
-	padding-top: 5px;
+	height: 97%;
 }
