--- a/client/styles/adminLesson.module.scss
+++ b/client/styles/adminLesson.module.scss
@@ -44,7 +44,7 @@
 }
 
 .table-container {
-	max-height: 90%; /* 設置最大高度，超過則滾動 */
+	max-height: 86%; /* 設置最大高度，超過則滾動 */
 	overflow-y: scroll;
 	scrollbar-width: 15px;
 }
